--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "axios": "^0.26.1",
     "buefy": "^0.9.19",
+    "dayjs": "^1.11.0",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.3"
+    "vue-router": "^3.5.3",
+    "vuex": "3.6.2"
   },
   "devDependencies": {
     "vite": "^2.8.0",
