--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "buefy": "^0.9.19",
     "dayjs": "^1.11.0",
     "vue": "^2.6.14",
+    "vue-html2pdf": "^1.8.0",
     "vue-router": "^3.5.3",
     "vuex": "3.6.2"
   },
